--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -69,6 +69,13 @@
     "@typescript-eslint/restrict-template-expressions": [
       "off"
     ],
+    "@typescript-eslint/prefer-nullish-coalescing": [
+      "error",
+      {
+        "ignoreConditionalTests": true,
+        "ignoreMixedLogicalExpressions": true
+      }
+    ],
     "header/header": [
       2,
       "line",
